--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <div id="root">
-     <nav class="nav-bar">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="root">
+      <nav class="nav-bar">
         <div class="box">
-            <div><img src="" alt="img"></div>
+          <div><img src="" alt="img" /></div>
 
-            <div><p>Categorías</p></div>
+          <div><p>Categorías</p></div>
 
-            <div><p>Buscar...</p></div>
+          <div><p>Buscar...</p></div>
         </div>
 
         <div class="box">
-            <div><a href="#" style="color:white;">Subir libro</a></div>
+          <div><a href="#" style="color: white">Subir libro</a></div>
 
-            <div><img src="" alt="img"></div>
+          <div class="profile-picture">
+            <a href="#"><img src="/assets/cat.jpg" alt="img" /></a>
+          </div>
         </div>
-
- 
-    </nav>
-    <div id="main-page"></div>
-   </div>
-</body>
+      </nav>
+      <div id="main-page"></div>
+    </div>
+  </body>
 </html>
