profile and up book completed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      .nav-bar {
+        width: 100vw;
+        background: green;
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem 1rem;
+      }
+
+      .box {
+        width: fit-content;
+        background-color: blue;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 6rem;
+      }
+
+      .profile-picture img {
+        width: 3rem;
+        height: 3rem;
+        object-fit: cover;
+        border-radius: 100%;
+      }
+    </style> -->
   </head>
   <body>
     <div id="root">
@@ -18,10 +49,10 @@
         </div>
 
         <div class="box">
-          <div><a href="#" style="color: white">Subir libro</a></div>
+          <div><a href="/agregar" style="color: white">Subir libro</a></div>
 
           <div class="profile-picture">
-            <a href="#"><img src="/assets/cat.jpg" alt="img" /></a>
+            <a href="/perfil"><img src="/assets/cat.jpg" alt="img" /></a>
           </div>
         </div>
       </nav>
