subir libro template terminado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
     <div id="root">
       <nav class="nav-bar">
         <div class="box">
-          <div><img src="" alt="img" /></div>
+          <div><a href="/home"><img src="" alt="img" /></a></div>
 
           <div><p>Categorías</p></div>
 
