Added landing page, signup, login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,10 @@
             <p>Categorías</p>
             <img style="width: 18px; height: 18px;" src="/assets/icons/chevron-down.svg" alt="">
           </div>
-          <div><p>Buscar...</p></div>
+          <form style="border: #616161 solid 1px; color: #616161; padding: .3rem; border-radius: .6rem; display: flex; align-items: center; justify-content: center; ">
+            <input class="buscar-libro" style="border: none; outline: none;" type="text" placeholder="Buscar libro...">
+            <img style="width: 16px; height: 16px;" src="/assets/icons/search.svg" alt="">
+          </form>
         </div>
 
         <div class="box">
