--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -35,6 +35,7 @@
       display: flex;
       align-items: center;
       align-content: center;
+      gap: 3rem;
     }
 
     .sobre-mi {
@@ -54,12 +55,12 @@
         </div>
 
         <div class="profile-stats">
-          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; flex: 1">
+          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; ; width: fit-content;">
             <p>12</p>
             <p>Libros subidos</p>
           </div>
 
-          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; flex: 1">
+          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; ">
             <p>32</p>
             <p>Favoritos</p>
           </div>
