--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <style>
     body {
       margin: 0;
       padding: 0;
+      font-family: "Roboto";
     }
     .profile-info {
       display: flex;
@@ -55,12 +63,12 @@
         </div>
 
         <div class="profile-stats">
-          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; ; width: fit-content;">
+          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; width: fit-content">
             <p>12</p>
             <p>Libros subidos</p>
           </div>
 
-          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center; ">
+          <div style="display: flex; flex-direction: column; gap: 0.5rem; align-items: center">
             <p>32</p>
             <p>Favoritos</p>
           </div>
@@ -75,7 +83,7 @@
       </div>
 
       <div style="max-height: 10rem; overflow: hidden">
-        <p style="font-weight: 100;">
+        <p style="font-weight: 100">
           Lorem ipsum dolor sit amet consectetur adipiscing, elit eleifend per porta luctus tortor, netus semper hac
           mauris ultricies. Porttitor nascetur cum nisl venenatis duis porta hendrerit, natoque lectus tincidunt
           inceptos eget parturient habitasse, tempus varius malesuada etiam himenaeos suspendisse. Suspendisse hendrerit
