--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <style>
-
-    
+    body {
+      font-family: "Roboto";
+      margin: 0;
+      padding: 0;
+    }
     .form-signup {
       display: flex;
       flex-direction: column;
@@ -34,7 +44,7 @@
       color: white;
       border: none;
       background-color: #147c58;
-      margin-top:1rem ;
+      margin-top: 1rem;
     }
 
     .icon-msg {
@@ -62,12 +72,7 @@
     .campo {
       display: flex;
       flex-direction: column;
-      gap: .5rem;
-    }
-
-    body{
-      padding: 0;
-      margin: 0;
+      gap: 0.5rem;
     }
   </style>
 
