--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -84,28 +84,39 @@
         <strong>Registrate en book-hub</strong>
       </div>
 
-      <form class="form-signup" action="">
+      <form id="formulario" class="form-signup" action="">
         <div class="campo">
           <strong>Email</strong>
-          <input type="email" placeholder="Ingresa tu correo electrónico" />
+          <input name="email" type="email" placeholder="Ingresa tu correo electrónico" />
         </div>
 
         <div class="campo">
           <strong>Nombre de usuario</strong>
-          <input type="text" placeholder="Ingresa tu nombre de usuario" />
+          <input name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
         </div>
 
         <div class="campo">
           <strong>Contraseña</strong>
-          <input type="text" placeholder="Ingresa tu contraseña" />
+          <input name="password" type="text" placeholder="Ingresa tu contraseña" />
         </div>
         <div class="campo">
           <strong>Confirma tu contraseña</strong>
-          <input type="text" placeholder="Confirma tu contraseña" />
+          <input name="password2" type="text" placeholder="Confirma tu contraseña" />
         </div>
 
         <button type="submit">Registrarse</button>
       </form>
     </div>
+
+    <script>
+      const formulario = document.getElementById('formulario');
+
+      formulario.addEventListener((event) => {
+        const password = 
+        let data = {
+          email: formulario.
+        }
+      })
+    </script>
   </body>
 </html>
