feature(signup): Form signup send data successfully

--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -86,22 +86,22 @@
 
       <form id="formulario" class="form-signup" action="">
         <div class="campo">
-          <strong>Email</strong>
-          <input name="email" type="email" placeholder="Ingresa tu correo electrónico" />
+          <label for="email">Email</label>
+          <input required name="email" type="email" placeholder="Ingresa tu correo electrónico" />
         </div>
 
         <div class="campo">
-          <strong>Nombre de usuario</strong>
-          <input name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
+          <label for="nombreUsuario">Nombre de usuario</label>
+          <input required name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
         </div>
 
         <div class="campo">
-          <strong>Contraseña</strong>
-          <input name="password" type="text" placeholder="Ingresa tu contraseña" />
+          <label for="password">Contraseña</label>
+          <input required name="password" type="password" placeholder="Ingresa tu contraseña" />
         </div>
         <div class="campo">
-          <strong>Confirma tu contraseña</strong>
-          <input name="password2" type="text" placeholder="Confirma tu contraseña" />
+          <label for="password2">Confirma tu contraseña</label>
+          <input required name="password2" type="password" placeholder="Confirma tu contraseña" />
         </div>
 
         <button type="submit">Registrarse</button>
@@ -109,14 +109,27 @@
     </div>
 
     <script>
-      const formulario = document.getElementById('formulario');
+      const formulario = document.getElementById("formulario");
 
-      formulario.addEventListener((event) => {
-        const password = 
-        let data = {
-          email: formulario.
+      formulario.addEventListener("submit", async (event) => {
+        event.preventDefault();
+        if (formulario.password.value !== formulario.password2.value) {
+          alert("Contraseñas no coinciden");
+          return;
+        } else {
+          let data = {
+            email: formulario.email.value,
+            nombreUsuario: formulario.nombreUsuario.value,
+            password: formulario.password.value,
+          };
+
+          const response = await fetch("/signup", {
+            method: "POST",
+            headers: { "Content-Type": "application:json" },
+            body: JSON.stringify(data),
+          });
         }
-      })
+      });
     </script>
   </body>
 </html>
