signup sucessful and redirect to login

--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -128,6 +128,9 @@
             headers: { "Content-Type": "application:json" },
             body: JSON.stringify(data),
           });
+          if (response.status === 200){
+            window.location.href = "/login"
+          }
         }
       });
     </script>
