login: login correct; when password incorrect falta

--- a/frontend/pages/landingPage.html
+++ b/frontend/pages/landingPage.html
@@ -117,7 +117,7 @@
           <strong>Empieza a leer. Empieza a compartir.</strong>
         </div>
         <div class="imagen">
-            <img src="/assets/imagen-landing.jpeg" alt="">
+            <!-- <img src="/assets/imagen-landing.jpeg" alt=""> -->
         </div>
       </div>
       <!-- </div> -->
