--- a/frontend/pages/landingPage.html
+++ b/frontend/pages/landingPage.html
@@ -14,6 +14,107 @@
   </head>
 
   <style>
+    .form-signup {
+      display: flex;
+      flex-direction: column;
+      /* width: 24rem; */
+      width: fit-content;
+      gap: 2rem;
+    }
+
+    .form-signup input {
+      border-radius: 0.4rem;
+      padding: 1.5rem 1rem;
+      border: solid 2px #e5e7eb;
+      font-size: 16px;
+    }
+
+    .form-signup input::placeholder {
+      font-size: 14px;
+    }
+
+    .form-signup button {
+      border-radius: 1rem;
+      padding: 1rem;
+      font-weight: 600;
+      font-size: 18px;
+      color: white;
+      border: none;
+      background-color: #147c58;
+      margin-top: 1rem;
+      width: 50%;
+      align-self: center;
+    }
+
+    .icon-msg {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 0.4rem;
+      font-size: large;
+    }
+
+    .icon-msg img {
+      border-radius: 0.5rem;
+      height: 5rem;
+      width: 5rem;
+    }
+
+    .form-container {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      width: fit-content;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: fit-content;
+      background-color: white;
+      transform: translate(-50%, -50%);
+      visibility: hidden;
+      z-index: 1000;
+      padding: 4rem 4rem;
+      border-radius: 1rem;
+    }
+
+    .campo {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    body {
+      padding: 0;
+      margin: 0;
+      font-family: "Roboto";
+    }
+
+    .contras {
+      display: flex;
+      flex-direction: column;
+      /* gap:1rem; */
+      /* width: 100%; */
+      flex: 1;
+    }
+    .usuario-email {
+      flex: 1;
+    }
+    label {
+      position: relative;
+      top: 1.1rem;
+      left: 1rem;
+      background-color: white;
+      width: fit-content;
+      color: #616161;
+    }
+    .campos-container {
+      display: flex;
+      flex-direction: row;
+      width: 50svw;
+      gap: 2rem;
+      justify-content: space-between;
+    }
     .logo {
       height: 2rem;
     }
@@ -25,7 +126,7 @@
     nav {
       height: 4rem;
       width: 100%;
-      border: solid black 1px;
+      /* border: solid black 1px; */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -38,6 +139,7 @@
       align-items: center;
       height: 100%;
       width: 100%;
+      /* z-index: 400; */
     }
 
     a {
@@ -50,6 +152,7 @@
       background-color: #147c58;
       color: white;
       border-radius: 2rem;
+      border: none;
     }
 
     .main {
@@ -57,12 +160,8 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
+      z-index: 30;
     }
-    /* .content-container{
-        background-color: aqua;
-        display: flex;
-        height: max-content;
-    } */
     .content {
       width: 50%;
       flex: 1;
@@ -70,22 +169,93 @@
       flex-direction: row;
       gap: 1rem;
     }
-    .text{
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
+    .text {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
     }
-    .imagen{
 
-    }
     * {
       margin: 0;
       box-sizing: border-box;
       padding: 0;
     }
+
+    /* FORM LOGIN */
+
+    .icon-msg {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: large;
+    }
+
+    .icon-msg img {
+      border-radius: 0.5rem;
+      height: 5rem;
+      width: 5rem;
+    }
+
+    .login-container {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      width: 32rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: fit-content;
+      background-color: white;
+      transform: translate(-50%, -50%);
+      visibility: hidden;
+      z-index: 7000;
+      padding: 2rem 4rem;
+      border-radius: 1rem;
+    }
+
+    .campo {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .form-login {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    .form-login input {
+      border-radius: 0.4rem;
+      padding: 1.5rem 1rem;
+      border: solid 2px #e5e7eb;
+      font-size: 16px;
+    }
+
+    .form-login input input::placeholder {
+      font-size: 14px;
+    }
+
+    .form-login button {
+      border-radius: 1rem;
+      padding: 1rem;
+      font-weight: 600;
+      font-size: 18px;
+      color: white;
+      border: none;
+      background-color: #147c58;
+      margin-top: 1rem;
+      width: 50%;
+      align-self: center;
+    }
+    .login p {
+      cursor: pointer;
+    }
   </style>
   <body>
-    <div class="main">
+    <div class="main" id="main">
       <nav>
         <div class="container">
           <img class="logo" src="/assets/book-hub.png" alt="" />
@@ -97,8 +267,10 @@
         </div>
 
         <div class="container">
-          <a href="/login">Iniciar sesión</a>
-          <a class="signup" href="/signup">Regístrate</a>
+          <!-- <a href="/login">Iniciar sesión</a> -->
+          <p class="login" id="login">Iniciar sesión</p>
+          <!-- <a class="signup" href="/signup">Regístrate</a> -->
+          <button class="signup" id="signup">Regístrate</button>
         </div>
       </nav>
       <!-- <div class="content-container"> -->
@@ -117,10 +289,140 @@
           <strong>Empieza a leer. Empieza a compartir.</strong>
         </div>
         <div class="imagen">
-            <!-- <img src="/assets/imagen-landing.jpeg" alt=""> -->
+          <!-- <img src="/assets/imagen-landing.jpeg" alt=""> -->
         </div>
       </div>
       <!-- </div> -->
     </div>
+
+    <div class="form-container" id="form-container">
+      <div class="icon-msg">
+        <img src="/assets/book-hub.png" alt="imgaen" />
+        <strong>Registrate en book-hub</strong>
+      </div>
+
+      <form id="formulario" class="form-signup" action="">
+        <div class="campos-container">
+          <div class="usuario-email">
+            <div class="campo">
+              <label for="email">Email</label>
+              <input required name="email" type="email" placeholder="Ingresa tu correo electrónico" />
+            </div>
+
+            <div class="campo">
+              <label for="nombreUsuario">Nombre de usuario</label>
+              <input required name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
+            </div>
+          </div>
+
+          <div class="contras">
+            <div class="campo">
+              <label for="password">Contraseña</label>
+              <input required name="password" type="password" placeholder="Ingresa tu contraseña" />
+            </div>
+            <div class="campo">
+              <label for="password2">Confirma tu contraseña</label>
+              <input required name="password2" type="password" placeholder="Confirma tu contraseña" />
+            </div>
+          </div>
+        </div>
+
+        <button type="submit">Registrarse</button>
+      </form>
+    </div>
+
+    <div id="login-container" class="login-container">
+      <div class="icon-msg">
+        <img src="/assets/book-hub.png" alt="img" />
+        <strong>Inicia sesión en book-hub</strong>
+      </div>
+
+      <form class="form-login" action="" id="form-login">
+        <div class="campo">
+          <label for="nombreUsuario">Usuario</label>
+          <input name="nombreUsuario" type="usuario" placeholder="Usuario" />
+        </div>
+
+        <div class="campo">
+          <label for="password">Contraseña</label>
+          <input name="password" type="text" placeholder="Ingresa tu contraseña" />
+        </div>
+
+        <button type="submit">Iniciar sesión</button>
+      </form>
+    </div>
   </body>
+  <script>
+    const button = document.getElementById("signup");
+    button.addEventListener("click", () => {
+      document.getElementById("form-container").style.visibility = "visible";
+      document.getElementById("main").style.backgroundColor = " rgba(0, 0, 0, 0.8)";
+      document.getElementById("main").style.filter = "brightness(40%)";
+    });
+
+    document.getElementById("main").addEventListener("click", (e) => {
+      if (e.target === main) {
+        document.getElementById("form-container").style.visibility = "hidden";
+        document.getElementById("login-container").style.visibility = "hidden";
+        document.getElementById("main").style.backgroundColor = " rgba(0, 0, 0, 0)";
+        document.getElementById("main").style.filter = "brightness(100%)";
+      }
+    });
+
+    const btn_login = document.getElementById("login");
+    btn_login.addEventListener("click", (e) => {
+      document.getElementById("login-container").style.visibility = "visible";
+      document.getElementById("main").style.backgroundColor = " rgba(0, 0, 0, 0.8)";
+      document.getElementById("main").style.filter = "brightness(40%)";
+    });
+
+    const formulario = document.getElementById("formulario");
+
+    formulario.addEventListener("submit", async (event) => {
+      event.preventDefault();
+      if (formulario.password.value !== formulario.password2.value) {
+        alert("Contraseñas no coinciden");
+        return;
+      } else {
+        let data = {
+          email: formulario.email.value,
+          nombreUsuario: formulario.nombreUsuario.value,
+          password: formulario.password.value,
+        };
+
+        const response = await fetch("/signup", {
+          method: "POST",
+          headers: { "Content-Type": "application:json" },
+          body: JSON.stringify(data),
+        });
+        if (response.status === 200) {
+          window.location.href = "/login";
+        }
+      }
+    });
+
+    //login
+
+    const formularioLogin = document.getElementById("form-login");
+    formularioLogin.addEventListener("submit", async (event) => {
+      event.preventDefault();
+      const data = {
+        nombreUsuario: formularioLogin.nombreUsuario.value,
+        password: formularioLogin.password.value,
+      };
+
+      fetch("/login", {
+        method: "POST",
+        headers: { "Content-Type": "application:json" },
+        body: JSON.stringify(data),
+      })
+        .then((res) => res.json())
+        .then((data) => {
+          data ? window.sessionStorage.setItem("user", JSON.stringify(data)) : alert(error);
+          // alert(data)
+          console.log(data)
+        })
+        .catch((err) => console.error(err));
+    });
+  </script>
 </html>
