--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -18,34 +18,6 @@
       margin: 0;
       padding: 0;
     }
-    .form-signup {
-      display: flex;
-      flex-direction: column;
-      width: 24rem;
-      gap: 1rem;
-    }
-
-    .form-signup input {
-      border-radius: 0.7rem;
-      padding: 0.6rem;
-      background-color: #e5e7eb;
-      border: none;
-    }
-
-    .form-signup input::placeholder {
-      font-size: 12px;
-    }
-
-    .form-signup button {
-      border-radius: 1rem;
-      padding: 0.6rem 3rem;
-      font-weight: 600;
-      font-size: 16px;
-      color: white;
-      border: none;
-      background-color: #147c58;
-      margin-top: 1rem;
-    }
 
     .icon-msg {
       display: flex;
@@ -62,11 +34,13 @@
       width: 5rem;
     }
 
-    .form-container {
+    .login-container {
       display: flex;
       flex-direction: column;
       gap: 2rem;
       width: fit-content;
+      z-index: 3000;
+      background-color: white;
     }
 
     .campo {
@@ -74,10 +48,16 @@
       flex-direction: column;
       gap: 0.5rem;
     }
+
+    .form-login{
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
   </style>
 
   <body>
-    <div class="form-container">
+    <div class="login-container">
       <div class="icon-msg">
         <img src="/assets/book-hub.png" alt="img" />
         <strong>Inicia sesión en book-hub</strong>
@@ -99,12 +79,12 @@
     </div>
   </body>
   <script>
-    const formulario = document.getElementById("form-login");
-    formulario.addEventListener("submit", async (event) => {
+    const formularioLogin = document.getElementById("form-login");
+    formularioLogin.addEventListener("submit", async (event) => {
       event.preventDefault();
       const data = {
-        nombreUsuario: formulario.nombreUsuario.value,
-        password: formulario.password.value,
+        nombreUsuario: formularioLogin.nombreUsuario.value,
+        password: formularioLogin.password.value,
       };
 
       fetch("/login", {
@@ -114,8 +94,8 @@
       })
         .then((res) => res.json())
         .then((data) => {
-          data ? window.sessionStorage.setItem("user", JSON.stringify(data)) : alert(error);
-          // res.status === 200? window.location.href = '/home' : alert('error')
+          data? window.sessionStorage.setItem("user", JSON.stringify(data)) : console.log("vacio")
+          
         })
         .catch(err => console.error(err))
     });
