--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -16,30 +16,33 @@
     .form-signup {
       display: flex;
       flex-direction: column;
-      width: 24rem;
-      gap: 1rem;
+      /* width: 24rem; */
+      width: fit-content;
+      gap: 2rem;
     }
 
     .form-signup input {
-      border-radius: 0.7rem;
-      padding: 0.6rem;
-      background-color: #e5e7eb;
-      border: none;
+      border-radius: 0.4rem;
+      padding: 1.5rem 1rem;
+      border: solid 2px #e5e7eb;
+      font-size: 16px;
     }
 
     .form-signup input::placeholder {
-      font-size: 12px;
+      font-size: 14px;
     }
 
     .form-signup button {
       border-radius: 1rem;
-      padding: 0.6rem 3rem;
+      padding: 1rem;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 18px;
       color: white;
       border: none;
       background-color: #147c58;
       margin-top: 1rem;
+      width: 50%;
+      align-self: center;
     }
 
     .icon-msg {
@@ -75,6 +78,32 @@
       margin: 0;
       font-family: "Roboto";
     }
+
+    .contras {
+      display: flex;
+      flex-direction: column;
+      /* gap:1rem; */
+      /* width: 100%; */
+      flex: 1;
+    }
+    .usuario-email{
+      flex:1;
+    }
+    label {
+      position: relative;
+      top: 1.1rem;
+      left: 1rem;
+      background-color: white;
+      width: fit-content;
+      color: #616161;
+    }
+    .campos-container {
+      display: flex;
+      flex-direction: row;
+      width: 50svw;
+      gap: 2rem;
+      justify-content: space-between;
+    }
   </style>
 
   <body>
@@ -85,23 +114,29 @@
       </div>
 
       <form id="formulario" class="form-signup" action="">
-        <div class="campo">
-          <label for="email">Email</label>
-          <input required name="email" type="email" placeholder="Ingresa tu correo electrónico" />
-        </div>
+        <div class="campos-container">
+          <div class="usuario-email">
+            <div class="campo">
+              <label for="email">Email</label>
+              <input required name="email" type="email" placeholder="Ingresa tu correo electrónico" />
+            </div>
 
-        <div class="campo">
-          <label for="nombreUsuario">Nombre de usuario</label>
-          <input required name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
-        </div>
+            <div class="campo">
+              <label for="nombreUsuario">Nombre de usuario</label>
+              <input required name="nombreUsuario" type="text" placeholder="Ingresa tu nombre de usuario" />
+            </div>
+          </div>
 
-        <div class="campo">
-          <label for="password">Contraseña</label>
-          <input required name="password" type="password" placeholder="Ingresa tu contraseña" />
-        </div>
-        <div class="campo">
-          <label for="password2">Confirma tu contraseña</label>
-          <input required name="password2" type="password" placeholder="Confirma tu contraseña" />
+          <div class="contras">
+            <div class="campo">
+              <label for="password">Contraseña</label>
+              <input required name="password" type="password" placeholder="Ingresa tu contraseña" />
+            </div>
+            <div class="campo">
+              <label for="password2">Confirma tu contraseña</label>
+              <input required name="password2" type="password" placeholder="Confirma tu contraseña" />
+            </div>
+          </div>
         </div>
 
         <button type="submit">Registrarse</button>
@@ -128,8 +163,8 @@
             headers: { "Content-Type": "application:json" },
             body: JSON.stringify(data),
           });
-          if (response.status === 200){
-            window.location.href = "/login"
+          if (response.status === 200) {
+           alert("usuario registrado correctamente")
           }
         }
       });
