--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -83,7 +83,7 @@
       </div>
 
       <div style="max-height: 10rem; overflow: hidden">
-        <p style="font-weight: 100">
+        <p style="font-weight: 100;">
           Lorem ipsum dolor sit amet consectetur adipiscing, elit eleifend per porta luctus tortor, netus semper hac
           mauris ultricies. Porttitor nascetur cum nisl venenatis duis porta hendrerit, natoque lectus tincidunt
           inceptos eget parturient habitasse, tempus varius malesuada etiam himenaeos suspendisse. Suspendisse hendrerit
