--- a/frontend/pages/landingPage.html
+++ b/frontend/pages/landingPage.html
@@ -11,249 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/styles/landingPage.css" />
   </head>
 
-  <style>
-    .form-signup {
-      display: flex;
-      flex-direction: column;
-      /* width: 24rem; */
-      width: fit-content;
-      gap: 2rem;
-    }
-
-    .form-signup input {
-      border-radius: 0.4rem;
-      padding: 1.5rem 1rem;
-      border: solid 2px #e5e7eb;
-      font-size: 16px;
-    }
-
-    .form-signup input::placeholder {
-      font-size: 14px;
-    }
-
-    .form-signup button {
-      border-radius: 1rem;
-      padding: 1rem;
-      font-weight: 600;
-      font-size: 18px;
-      color: white;
-      border: none;
-      background-color: #147c58;
-      margin-top: 1rem;
-      width: 50%;
-      align-self: center;
-    }
-
-    .icon-msg {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 0.4rem;
-      font-size: large;
-    }
-
-    .icon-msg img {
-      border-radius: 0.5rem;
-      height: 5rem;
-      width: 5rem;
-    }
-
-    .form-container {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      width: fit-content;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      height: fit-content;
-      background-color: white;
-      transform: translate(-50%, -50%);
-      visibility: hidden;
-      z-index: 1000;
-      padding: 4rem 4rem;
-      border-radius: 1rem;
-    }
-
-    .campo {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-
-    body {
-      padding: 0;
-      margin: 0;
-      font-family: "Roboto";
-    }
-
-    .contras {
-      display: flex;
-      flex-direction: column;
-      /* gap:1rem; */
-      /* width: 100%; */
-      flex: 1;
-    }
-    .usuario-email {
-      flex: 1;
-    }
-    label {
-      position: relative;
-      top: 1.1rem;
-      left: 1rem;
-      background-color: white;
-      width: fit-content;
-      color: #616161;
-    }
-    .campos-container {
-      display: flex;
-      flex-direction: row;
-      width: 50svw;
-      gap: 2rem;
-      justify-content: space-between;
-    }
-    .logo {
-      height: 2rem;
-    }
-    body {
-      padding: 0;
-      margin: 0;
-      font-family: "Roboto";
-    }
-    nav {
-      height: 4rem;
-      width: 100%;
-      /* border: solid black 1px; */
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      /* padding: 0 1rem; */
-    }
-    .container {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-      /* z-index: 400; */
-    }
-
-    a {
-      text-decoration: none;
-      color: black;
-    }
-    .signup {
-      margin-left: 0.5rem;
-      padding: 0.5rem 2rem;
-      background-color: #147c58;
-      color: white;
-      border-radius: 2rem;
-      border: none;
-    }
-
-    .main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      z-index: 30;
-    }
-    .content {
-      width: 50%;
-      flex: 1;
-      display: flex;
-      flex-direction: row;
-      gap: 1rem;
-    }
-    .text {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-    }
-
-    * {
-      margin: 0;
-      box-sizing: border-box;
-      padding: 0;
-    }
-
-    /* FORM LOGIN */
-
-    .icon-msg {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 0.5rem;
-      font-size: large;
-    }
-
-    .icon-msg img {
-      border-radius: 0.5rem;
-      height: 5rem;
-      width: 5rem;
-    }
-
-    .login-container {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      width: 32rem;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      height: fit-content;
-      background-color: white;
-      transform: translate(-50%, -50%);
-      visibility: hidden;
-      z-index: 7000;
-      padding: 2rem 4rem;
-      border-radius: 1rem;
-    }
-
-    .campo {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-
-    .form-login {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-    }
-
-    .form-login input {
-      border-radius: 0.4rem;
-      padding: 1.5rem 1rem;
-      border: solid 2px #e5e7eb;
-      font-size: 16px;
-    }
-
-    .form-login input input::placeholder {
-      font-size: 14px;
-    }
-
-    .form-login button {
-      border-radius: 1rem;
-      padding: 1rem;
-      font-weight: 600;
-      font-size: 18px;
-      color: white;
-      border: none;
-      background-color: #147c58;
-      margin-top: 1rem;
-      width: 50%;
-      align-self: center;
-    }
-    .login p {
-      cursor: pointer;
-    }
-  </style>
   <body>
     <div class="main" id="main">
       <nav>
@@ -420,7 +180,7 @@
         .then((data) => {
           data ? window.sessionStorage.setItem("user", JSON.stringify(data)) : alert(error);
           // alert(data)
-          console.log(data)
+          console.log(data);
         })
         .catch((err) => console.error(err));
     });
