--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -11,101 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/styles/signup.css" />
   </head>
-  <style>
-    .form-signup {
-      display: flex;
-      flex-direction: column;
-      /* width: 24rem; */
-      width: fit-content;
-      gap: 2rem;
-    }
-
-    .form-signup input {
-      border-radius: 0.4rem;
-      padding: 1.5rem 1rem;
-      border: solid 2px #e5e7eb;
-      font-size: 16px;
-    }
-
-    .form-signup input::placeholder {
-      font-size: 14px;
-    }
-
-    .form-signup button {
-      border-radius: 1rem;
-      padding: 1rem;
-      font-weight: 600;
-      font-size: 18px;
-      color: white;
-      border: none;
-      background-color: #147c58;
-      margin-top: 1rem;
-      width: 50%;
-      align-self: center;
-    }
-
-    .icon-msg {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 0.4rem;
-      font-size: large;
-    }
-
-    .icon-msg img {
-      border-radius: 0.5rem;
-      height: 5rem;
-      width: 5rem;
-    }
-
-    .form-container {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      width: fit-content;
-    }
-
-    .campo {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-
-    body {
-      padding: 0;
-      margin: 0;
-      font-family: "Roboto";
-    }
-
-    .contras {
-      display: flex;
-      flex-direction: column;
-      /* gap:1rem; */
-      /* width: 100%; */
-      flex: 1;
-    }
-    .usuario-email{
-      flex:1;
-    }
-    label {
-      position: relative;
-      top: 1.1rem;
-      left: 1rem;
-      background-color: white;
-      width: fit-content;
-      color: #616161;
-    }
-    .campos-container {
-      display: flex;
-      flex-direction: row;
-      width: 50svw;
-      gap: 2rem;
-      justify-content: space-between;
-    }
-  </style>
-
   <body>
     <div class="form-container">
       <div class="icon-msg">
@@ -142,32 +49,6 @@
         <button type="submit">Registrarse</button>
       </form>
     </div>
-
-    <script>
-      const formulario = document.getElementById("formulario");
-
-      formulario.addEventListener("submit", async (event) => {
-        event.preventDefault();
-        if (formulario.password.value !== formulario.password2.value) {
-          alert("Contraseñas no coinciden");
-          return;
-        } else {
-          let data = {
-            email: formulario.email.value,
-            nombreUsuario: formulario.nombreUsuario.value,
-            password: formulario.password.value,
-          };
-
-          const response = await fetch("/signup", {
-            method: "POST",
-            headers: { "Content-Type": "application:json" },
-            body: JSON.stringify(data),
-          });
-          if (response.status === 200) {
-           alert("usuario registrado correctamente")
-          }
-        }
-      });
-    </script>
+    <script src="/scripts/signup.js"></script>
   </body>
 </html>
